--- a/examples/MINIMP3_test_SWSerialOut/.arduino-ci.yml
+++ b/examples/MINIMP3_test_SWSerialOut/.arduino-ci.yml
@@ -16,7 +16,7 @@ packages:
 compile:
   # Choosing to run compilation tests on 2 different Arduino platforms
   platforms:
-    - uno
+    # - uno
     # - due
     # - zero
     # - leonardo
@@ -24,4 +24,4 @@ compile:
     # - esp32
     # - esp8266
     # - mega2560
-    - rpipico
+    # - rpipico
